--- a/templates/members.html
+++ b/templates/members.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'index.css' %}">
-    <title>Tech | Members</title>
+    <link rel="stylesheet" href="{% static 'members.css' %}">
+    <title>Tech | Membros</title>
 </head>
 <body>
     <header>
         <img src="{% static 'assets/member.jpeg' %}" alt="Imagem com varias pessoas felizes" class="logo">
     </header>
     <main>
-        <h1>Area para membros</h1>
+        <h1>Área para membros</h1>
+        <p>Uma área de membros online e exclusivo para pessoas registradas!</p>
+
+        <div class="logout-btn-container">
+                <a href="http://localhost:8000/accounts/logout" class="logout-btn">Logout</a>
+        </div>
     </main>
 </body>
 </html>
